for promise chaining

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <span class="slider round"></span>
       </label>
 </body>
-<script src="first.js"></script>
+<!--<script src="first.js"></script>-->
+<script src="second.js"></script>
 </html>
